Add mapping entry for newer DualShock 4 model

This gamepad shipped with the PlayStation 4 Slim. It has the same
mapping as the original DualShock 4 but a different PID.

BUG=664030
TEST=http://html5gamepad.com

Review-Url: https://codereview.chromium.org/2490103002
Cr-Commit-Position: refs/heads/master@{#431216}

Former-commit-id: 1018bb702883f08b560a30c5be2acc9aa9c85a6e