device/gamepad/gamepad_standard_mappings_linux.cc
@@ -331,6 +331,7 @@ struct MappingData {
     {"046d", "c21f", MapperXInputStyleGamepad},  // Logitech F710
     {"054c", "0268", MapperPlaystationSixAxis},  // Playstation SIXAXIS
     {"054c", "05c4", MapperDualshock4},          // Playstation Dualshock 4
+    {"054c", "09cc", MapperDualshock4},          // Dualshock 4 (PS4 Slim)
     {"0583", "2060", MapperIBuffalo},            // iBuffalo Classic
     {"0925", "0005", MapperLakeviewResearch},    // SmartJoy PLUS Adapter
     {"0925", "8866", MapperLakeviewResearch},    // WiseGroup MP-8866
